--- a/imgversion.conf
+++ b/imgversion.conf
@@ -1,26 +1,60 @@
-# 镜像版本集中管理（被 start.sh 读取并写入 .env）
+# ======================
+# 基础依赖
+# ======================
 IMAGE_TRAEFIK=traefik:v3.5.2
 IMAGE_POSTGRES=postgres:17.6
-IMAGE_KEYCLOAK=quay.io/keycloak/keycloak:26.3.4
+IMAGE_ZOOKEEPER=bitnami/zookeeper:3.9.2
+IMAGE_KAFKA=bitnami/kafka:3.7.0
 
+# ======================
+# 身份认证 / 安全
+# ======================
+IMAGE_KEYCLOAK=quay.io/keycloak/keycloak:26.3.4
+IMAGE_RANGER_ADMIN=apache/ranger:2.7.0
+
+# ======================
+# 存储 / 表格式
+# ======================
 IMAGE_MINIO=quay.io/minio/minio:latest
 IMAGE_MINIO_MC=quay.io/minio/mc:latest
+IMAGE_NESSIE=bitnami/nessie:0.104.10
 
-IMAGE_HIVE=apache/hive:4.1.0
+# ======================
+# 计算引擎
+# ======================
 IMAGE_TRINO=trinodb/trino:latest
+IMAGE_DORIS_FE=apache/doris:fe-3.1.0
+IMAGE_DORIS_BE=apache/doris:be-3.1.0
+IMAGE_DORIS_BROKER=apache/doris:broker-3.1.0
+IMAGE_FLINK=flink:scala_2.12-java21
+IMAGE_SPARK=spark:4.0.0-java21
 
+# ======================
+# 元数据 / 数据治理
+# ======================
 IMAGE_ELASTICSEARCH=docker.elastic.co/elasticsearch/elasticsearch:8.19.4
 IMAGE_OPENMETADATA=openmetadata/server:latest
 
+# ======================
+# 调度 / 集成
+# ======================
 IMAGE_TEMPORAL=temporalio/auto-setup:1.26.3
-
+IMAGE_AIRFLOW=apache/airflow:2.10.2
 IMAGE_AIRBYTE_SERVER=airbyte/server:1.8.2
 IMAGE_AIRBYTE_WORKER=airbyte/worker:1.8.2
+IMAGE_AIRBYTE_BOOTLOADER=airbyte/bootloader:1.8.2
+IMAGE_DBT=ghcr.io/dbt-labs/dbt-trino:1.9.3
 
-# 可选
-IMAGE_OLLAMA=ollama/ollama:latest
+# ======================
+# 监控 / 日志
+# ======================
+IMAGE_GRAFANA=grafana/grafana:11.2.0
+IMAGE_PROMETHEUS=prom/prometheus:v2.54.1
+IMAGE_CADVISOR=gcr.io/cadvisor/cadvisor:v0.49.1
 IMAGE_LOKI=grafana/loki:2.9.8
 IMAGE_PROMTAIL=grafana/promtail:2.9.8
-IMAGE_PROMETHEUS=prom/prometheus:v2.54.1
-IMAGE_GRAFANA=grafana/grafana:11.2.0
-IMAGE_CADVISOR=gcr.io/cadvisor/cadvisor:v0.49.1
+
+# ======================
+# 可选 / AI
+# ======================
+IMAGE_OLLAMA=ollama/ollama:latest
